--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         >HippoType
       </h1>
       <div id="header">
-        <div id="info">30</div>
+        <div id="info"></div>
         <div id="buttons">
-          <button>Restart</button>
+          <button id="newGameBtn">New Game</button>
         </div>
       </div>
       <div id="game" tabindex="1">
